--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -203,7 +203,7 @@
     "print(\"Lũy thừa:\", a ** b)\n",
     "\n",
     "# Căn bậc hai\n",
-    "print(\"Căn bậc hai:\", math.sqrt(a))  # sqrt(10)\n",
+    "print(\"Căn bậc hai:\", math.sqrt(a))\n",
     "\n",
     "# Hàm lượng giác (tính bằng radian)\n",
     "x = math.pi / 4   # góc 45 độ\n",
@@ -212,7 +212,7 @@
     "print(\"tan(x):\", math.tan(x))\n",
     "\n",
     "# Logarit\n",
-    "print(\"log10(a):\", math.log10(a))   # log cơ số 10\n",
+    "print(\"log10(a):\", math.log10(a))\n",
     "print(\"ln(a):\", math.log(a))        # log tự nhiên (cơ số e)\n",
     "print(\"log cơ số b của a:\", math.log(a, b))  # log_b(a)\n"
    ]
