--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -139,10 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Delta = 40.0\n",
-      "Phương trình có 2 nghiệm phân biệt:\n",
-      "x1 = 0.38742588672279316\n",
-      "x2 = -1.7207592200561266\n"
+      "Căn delta = 8.717797887081348\n"
      ]
     }
    ],
@@ -157,21 +154,8 @@
     "\n",
     "# Tính delta\n",
     "delta = b*b-4*a*c\n",
-    "print(\"Delta =\", delta)\n",
-    "\n",
-    "# Xét nghiệm\n",
-    "if delta < 0:\n",
-    "    print(\"Phương trình vô nghiệm\")\n",
-    "elif delta == 0:\n",
-    "    x = -b / (2 * a)\n",
-    "    print(\"Phương trình có nghiệm kép x =\", x)\n",
-    "else:\n",
-    "    x1 = (-b + math.sqrt(delta)) / (2 * a)\n",
-    "    x2 = (-b - math.sqrt(delta)) / (2 * a)\n",
-    "    print(\"Phương trình có 2 nghiệm phân biệt:\")\n",
-    "    print(\"x1 =\", x1)\n",
-    "    print(\"x2 =\", x2)\n",
-    "    "
+    "can_delta = math.sqrt(delta)\n",
+    "print(\"Căn delta =\", can_delta)\n"
    ]
   },
   {
