--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 2 bài 1 ở đây"
+    "# Code lab 2 bài 1 ở đây\n",
+    "import math"
    ]
   },
   {
