--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Căn delta = 8.717797887081348\n"
+      "Delta = -188.0\n",
+      "Căn delta = 13.711309200802088\n"
      ]
     }
    ],
@@ -154,7 +155,8 @@
     "\n",
     "# Tính delta\n",
     "delta = b*b-4*a*c\n",
-    "can_delta = math.sqrt(delta)\n",
+    "can_delta = math.sqrt(abs(delta))\n",
+    "print(\"Delta =\", delta)\n",
     "print(\"Căn delta =\", can_delta)\n"
    ]
   },
