--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -232,18 +232,24 @@
     "number1 = float(input(\"Nhập số thứ nhất: \"))\n",
     "number2 = float(input(\"Nhập số thứ hai: \"))    \n",
     "toantu = input(\"Nhập phép toán (+, -, *, /): \") \n",
+    "\n",
     "if toantu == \"+\":\n",
-    "    ketqua = (number1) + (number2)\n",
-    "    print(f\"Kết quả:\", ketqua)\n",
-    "if toantu == \"-\":\n",
-    "    ketqua = (number1) - (number2)\n",
-    "    print(f\"Kết quả:\", ketqua)   \n",
-    "if toantu == \"*\":\n",
-    "    ketqua = (number1) * (number2)\n",
-    "    print(f\"Kết quả:\", ketqua)\n",
-    "if toantu == \"/\" and number2 != 0:\n",
-    "        ketqua = (number1) / (number2)\n",
-    "        print(f\"Kết quả:\", ketqua)"
+    "    ketqua = number1 + number2\n",
+    "    print(f\"Kết quả: {ketqua}\")\n",
+    "elif toantu == \"-\":\n",
+    "    ketqua = number1 - number2\n",
+    "    print(f\"Kết quả: {ketqua}\")\n",
+    "elif toantu == \"*\":\n",
+    "    ketqua = number1 * number2\n",
+    "    print(f\"Kết quả: {ketqua}\")\n",
+    "elif toantu == \"/\":\n",
+    "    if number2 != 0:\n",
+    "        ketqua = number1 / number2\n",
+    "        print(f\"Kết quả: {ketqua}\")\n",
+    "    else:\n",
+    "        print(\"Lỗi: Không thể chia cho 0!\")\n",
+    "else:\n",
+    "    print(\"Toán tử không hợp lệ!\")"
    ]
   }
  ],
