--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -175,7 +175,7 @@
     "        sl_bd  = float(input(\"Bánh dẻo: \"))\n",
     "        print(f\"Nguyên liệu làm bánh: {lab4.tinh_nguyen_lieu(sl_bdx, sl_btc, sl_bd)}\")\n",
     "    else:\n",
-    "        print(\"Lựa chọn không hợp lệ, vui lòng nhập lại!\")\n"
+    "        print(\"Lựa chọn không hợp lệ, vui lòng nhập lại hoăc nhập 3 để thoát!\")\n"
    ]
   },
   {
