--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -128,17 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.7' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================== MENU ==============================\n",
+      "1 : Tính tiền nước sinh hoạt\n",
+      "2 : Tính nguyên liệu làm bánh\n",
+      "3 : Thoát\n",
+      "===========================================================================\n",
+      "Lựa chọn chức năng Chương trình\n",
+      "Kết thúc chương trình\n"
      ]
     }
    ],
@@ -197,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
