--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -39,9 +39,25 @@
    "execution_count": null,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sản Phẩmbanh mi Giá: 20000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 2000.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 5  bài 2 ở đây"
+    "# Code lab 5  bài 2 ở đây\n",
+    "from sanpham import *\n",
+    "\n",
+    "sp1 = SanPham(\"\",\"\",\"\")\n",
+    "sp2 = SanPham(\"\",\"\",\"\")\n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "sp1.xuat_thong_tin_sp()\n",
+    "sp2.nhap_thong_tin_sp()\n",
+    "sp2.xuat_thong_tin_sp()"
    ]
   },
   {
@@ -57,9 +73,28 @@
    "execution_count": null,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sản Phẩmbanh mi Giá: 30000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 3000.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 5  bài 3 ở đây"
+    "# Code lab 5  bài 3 ở đây\n",
+    "# Sử dụng getter và setter để truy xuất và cập nhật thông tin sản phẩm\n",
+    "from sanpham import *\n",
+    "\n",
+    "sp1 = SanPham(\"\", \"\", \"\")\n",
+    "sp2 = SanPham(\"\", \"\", \"\")\n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "sp1.xuat_thong_tin_sp()\n",
+    "print()\n",
+    "sp2.nhap_thong_tin_sp()\n",
+    "sp2.xuat_thong_tin_sp()"
    ]
   },
   {
@@ -72,12 +107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sản Phẩmbanh mi Giá: 300000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 30000.0\n",
+      "Sản Phẩmbanh mi Giá: 300000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 30000.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# code lab 5 bài 4 ở đây"
+    "# code lab 5 bài 4 ở đây\n",
+    "from sanpham import *\n",
+    "\n",
+    "sp1 = SanPham(\"\", \"\", \"\")\n",
+    "\n",
+    "sp1.nhap_thong_tin_sp()\n",
+    "print(sp1)\n",
+    "sp1.set_ten_sp(\"Iphone 16 Pro Max\")\n",
+    "print(sp1)"
    ]
   },
   {
@@ -101,13 +153,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
