--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -23,7 +23,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 7 bài 1 ở đây"
+    "# Code lab 7 bài 1 ở đây\n",
+    "# Đọc toàn bộ nội dung của file và xuất ra màn hình\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d1f45a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Đọc và xuất ra màn hình tên bài thơ (9 ký tự đầu tiên)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a93a2c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Đọc và xuất ra màn hình tên tác giả (dòng thứ hai)\n"
    ]
   },
   {
@@ -101,13 +122,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
