--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -107,19 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4c707ec1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sản Phẩmbanh mi Giá: 300000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 30000.0\n",
-      "Sản Phẩmbanh mi Giá: 300000.0 Giảm giá: 5000.0 Thuế nhập khẩu: 30000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# code lab 5 bài 4 ở đây\n",
     "from sanpham import *\n",
@@ -129,7 +120,7 @@
     "sp1.nhap_thong_tin_sp()\n",
     "print(sp1)\n",
     "sp1.set_ten_sp(\"Iphone 16 Pro Max\")\n",
-    "print(sp1)"
+    "print(sp1)\n"
    ]
   },
   {
