--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -120,7 +120,7 @@
     "sp1.nhap_thong_tin_sp()\n",
     "print(sp1)\n",
     "sp1.set_ten_sp(\"Iphone 16 Pro Max\")\n",
-    "print(sp1)\n"
+    "print(sp1)"
    ]
   },
   {
